k8s/realworld-flux-stack/dev/traefik-bootstrap/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mydevopsjourney-ingress
  namespace: realworld-app
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod

    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure

    ingress.kubernetes.io/ssl-redirect: "true"

    traefik.ingress.kubernetes.io/router.middlewares: realworld-app-security-headers@kubernetescrd

spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - mydevopsjourney.fun
      secretName: mydevopsjourney-fun-tls
  rules:
    - host: mydevopsjourney.fun
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
